added entities for ThreeDaysForecastController
